--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
 </head>
 <body>
     <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <header>
+        <h1>Bluebikes Traffic Map</h1>
+        <label style="margin-left:auto;">
+          Filter by time:
+          <input id="time-slider" type="range" min="-1" max="1440" value="-1" />
+          <span style="display:block;">
+            <time id="selected-time" style="display:none;">12:00 AM</time>
+            <em id="any-time" style="display:block;">(any time)</em>
+          </span>
+        </label>
+      </header>      
     <div id="map">
         <svg></svg>
     </div>
+    <div class="legend">
+        <div style="--departure-ratio: 1">More departures</div>
+        <div style="--departure-ratio: 0.5">Balanced</div>
+        <div style="--departure-ratio: 0">More arrivals</div>
+      </div>
 </body>
 </html>
